[gd_scene load_steps=14 format=3 uid="uid://viyb6a5pyr1"]

[ext_resource type="Script" path="res://Game/Scripts/FlyingEnemyBasic.gd" id="1_gb2hd"]
[ext_resource type="PackedScene" uid="uid://bfj75i0gn5ick" path="res://Game/OtherScenes/enemy_bullet.tscn" id="2_rl57a"]
[ext_resource type="Texture2D" uid="uid://br8fnqya4gq82" path="res://Game/Sprites/Space_Game_Enemy_Death_Sparks.png" id="3_ker1x"]
[ext_resource type="Texture2D" uid="uid://c87kebhcrgrf3" path="res://Game/Sprites/FlyingEnemyBasic.png" id="4_wx7rs"]
[ext_resource type="Script" path="res://Game/OtherScenes/SetAnimationDefaultRotationLock.gd" id="5_rqgls"]
[ext_resource type="AudioStream" uid="uid://dnvqrvt7gi2dv" path="res://Game/Audio/hitHurt.wav" id="6_qyyo5"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_sylvt"]
size = Vector2(12, 12)

[sub_resource type="AtlasTexture" id="AtlasTexture_02it4"]
atlas = ExtResource("3_ker1x")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ac6lk"]
atlas = ExtResource("3_ker1x")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_8sua0"]
atlas = ExtResource("4_wx7rs")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_77vrq"]
atlas = ExtResource("4_wx7rs")
region = Rect2(16, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_gn1wo"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_02it4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ac6lk")
}],
"loop": false,
"name": &"death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8sua0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_77vrq")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rq4go"]
size = Vector2(14, 14)

[node name="FlyingEnemyBasic" type="AnimatableBody2D" groups=["bullet_enemy", "capturable_enemies", "enemy_kill"]]
collision_layer = 2
collision_mask = 0
sync_to_physics = false
script = ExtResource("1_gb2hd")
enemy_bullet = ExtResource("2_rl57a")

[node name="CollisionShape2D" type="CollisionShape2D" parent="." groups=["enemy_hitbox"]]
shape = SubResource("RectangleShape2D_sylvt")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
rotation = 3.14159
sprite_frames = SubResource("SpriteFrames_gn1wo")
script = ExtResource("5_rqgls")

[node name="ShootLocation" type="Marker2D" parent="."]
position = Vector2(8, 0)
rotation = 3.14159

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D" groups=["enemy_hitbox"]]
shape = SubResource("RectangleShape2D_rq4go")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]

[node name="EnemyDeathAudioPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_qyyo5")
volume_db = -10.0

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="screen_entered" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
